--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/react-dom": "^18.2.6",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
-    "antd": "^5.6.4",
+    "antd": "4.24.10",
     "babel-plugin-import": "1.13.5",
     "dumi": "^1.1.0",
     "father": "^4.0.0-rc.2",
