--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": ">= 3.x"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^13.0.0",
     "@types/jest": "^27.0.3",
@@ -50,7 +51,10 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-lazyload": "^3.2.0",
+    "svg-url-loader": "6.0.0",
     "yorkie": "^2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@antv/g6": "^4.8.20"
+  }
 }
