--- a/package.json
+++ b/package.json
@@ -38,23 +38,25 @@
     "@types/jest": "^27.0.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-window": "^1.8.8",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
-    "antd": "4.24.10",
     "babel-plugin-import": "1.13.5",
     "dumi": "^1.1.0",
     "father": "^4.0.0-rc.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-lazyload": "^3.2.0",
     "svg-url-loader": "6.0.0",
     "yorkie": "^2.0.0"
   },
   "dependencies": {
-    "@antv/g6": "^4.8.20"
+    "@antv/g6": "^4.8.20",
+    "antd": "4.24.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-window": "^1.8.10"
   }
 }
