--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "jsx": "react",
     "esModuleInterop": true,
     "types": ["jest"],
+    "baseUrl": "./",
     "strict": true,
     "skipLibCheck": true,
-    "declaration": true
+    "declaration": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
