--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /npm-debug.log*
@@ -26,3 +24,7 @@
 /.vscode
 /.idea
 /dist
+
+.dumi/tmp
+.dumi/tmp-test
+.dumi/tmp-production
