--- a/package.json
+++ b/package.json
@@ -1,62 +1,90 @@
 {
-  "name": "base",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "dumi dev",
-    "docs:build": "dumi build",
-    "docs:deploy": "gh-pages -d docs-dist",
-    "build": "father build",
-    "deploy": "npm run docs:build && npm run docs:deploy",
-    "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage",
-    "prepublishOnly": "npm run build"
-  },
+  "name": "guos-components",
+  "version": "0.0.1",
+  "description": "A react library developed with dumi",
+  "license": "MIT",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "module": "dist/esm/index.js",
-  "typings": "dist/esm/index.d.ts",
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "scripts": {
+    "build": "father build",
+    "build:watch": "father dev",
+    "dev": "dumi dev",
+    "docs:build": "dumi build",
+    "doctor": "father doctor",
+    "lint": "npm run lint:es && npm run lint:css",
+    "lint:css": "stylelint \"{src,test}/**/*.{css,less}\" --fix",
+    "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\" --fix",
+    "prepare": "husky install && dumi setup",
+    "prepublishOnly": "father doctor && npm run build",
+    "start": "npm run dev"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
+    "*.{md,json}": [
+      "prettier --write --no-error-on-unmatched-pattern"
+    ],
+    "*.{css,less}": [
+      "stylelint --fix",
       "prettier --write"
     ],
-    "*.ts?(x)": [
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{ts,tsx}": [
+      "eslint --fix",
       "prettier --parser=typescript --write"
     ]
   },
-  "peerDependencies": {
-    "typescript": ">= 3.x"
+  "dependencies": {
+    "@antv/g6": "^4.8.24",
+    "antd": "4.24.6",
+    "rc-resize-observer": "^1.4.0",
+    "rc-tree-select": "^5.19.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-window": "^1.8.10",
+    "umi": "^4.0.84"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@svgr/webpack": "^8.0.1",
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^13.0.0",
-    "@types/jest": "^27.0.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-window": "^1.8.8",
-    "@umijs/fabric": "^2.8.1",
-    "@umijs/test": "^3.0.5",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "@umijs/lint": "^4.0.0",
     "babel-plugin-import": "1.13.5",
-    "dumi": "^1.1.0",
-    "father": "^4.0.0-rc.2",
-    "gh-pages": "^3.0.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.1",
+    "dumi": "^2.2.17",
+    "eslint": "^8.23.0",
+    "father": "^4.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.0.0",
+    "prettier-plugin-packagejson": "^2.2.18",
     "react-helmet-async": "^1.3.0",
     "react-lazyload": "^3.2.0",
-    "svg-url-loader": "6.0.0",
-    "yorkie": "^2.0.0"
+    "stylelint": "^14.9.1",
+    "svg-url-loader": "6.0.0"
   },
-  "dependencies": {
-    "@antv/g6": "^4.8.20",
-    "antd": "4.24.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-window": "^1.8.10"
-  }
+  "peerDependencies": {
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "authors": [
+    "guosheng"
+  ]
 }
