--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@antv/g6": "^4.8.24",
     "antd": "4.24.6",
+    "axios": "^1.6.8",
     "rc-resize-observer": "^1.4.0",
     "rc-tree-select": "^5.19.0",
     "react": "^18.2.0",
