--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@antv/g6": "^4.8.24",
     "antd": "4.24.6",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "rc-resize-observer": "^1.4.0",
     "rc-tree-select": "^5.19.0",
     "react": "^18.2.0",
