--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepare": "husky install && dumi setup",
     "prepublishOnly": "father doctor && npm run build",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "test": "jest --passWithNoTests"
   },
   "commitlint": {
     "extends": [
@@ -59,7 +60,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@jest/globals": "^29.7.0",
     "@svgr/webpack": "^8.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-window": "^1.8.8",
@@ -71,6 +75,7 @@
     "eslint": "^8.23.0",
     "father": "^4.1.0",
     "husky": "^8.0.1",
+    "jest": "^29.7.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
@@ -78,7 +83,8 @@
     "react-helmet-async": "^1.3.0",
     "react-lazyload": "^3.2.0",
     "stylelint": "^14.9.1",
-    "svg-url-loader": "6.0.0"
+    "svg-url-loader": "6.0.0",
+    "ts-jest": "^29.1.3"
   },
   "peerDependencies": {
     "react": ">=16.9.0",
