--- a/.github/workflows/SyncGithubToGitee.yml
+++ b/.github/workflows/SyncGithubToGitee.yml
@@ -14,7 +14,7 @@ jobs:
       uses: Yikun/hub-mirror-action@v1.4  # 使用Yikun/hub-mirror-action
       with:
         src: github/GuoSTZ  # 源端账户名(github)
-        dst: gitee/guosheng  # 目的端账户名(gitee)
+        dst: gitee/GuoSTZ  # 目的端账户名(gitee)
         dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}  # SSH密钥对中的私钥
         dst_token:  ${{ secrets.GITEE_TOKEN }}  # Gitee账户的私人令牌
         account_type: user  # 账户类型
