feat: 新增组件FromRender demo

--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "@formily/core": "^2.3.1",
     "@formily/react": "^2.3.1",
     "@formily/reactive": "^2.3.1",
+    "@formily/shared": "^2.3.1",
     "antd": "4.24.6",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
     "rc-resize-observer": "^1.4.0",
     "rc-tree-select": "^5.19.0",
