--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@typescript-eslint/parser": "^7.7.1",
     "@umijs/lint": "^4.0.0",
     "babel-plugin-import": "1.13.5",
+    "compression-webpack-plugin": "^11.1.0",
     "dumi": "^2.2.17",
     "eslint": "^8.23.0",
     "father": "^4.1.0",
