--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-window": "^1.8.10",
+    "socket.io-client": "^4.7.5",
     "umi": "^4.0.84"
   },
   "devDependencies": {
