--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "guos-components",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "A react library developed with dumi",
   "license": "MIT",
   "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/global.d.ts",
   "files": [
     "dist"
   ],
