--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "dumi": "^2.2.17",
     "eslint": "^8.23.0",
     "father": "^4.1.0",
+    "file-loader": "^6.2.0",
     "husky": "^8.0.1",
     "jest": "^29.7.0",
     "lint-staged": "^13.0.3",
