--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "guos-components",
   "version": "1.0.0",
-  "description": "A react library developed with dumi",
+  "description": "g-components",
   "license": "MIT",
-  "module": "dist/index.js",
-  "types": "dist/global.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "typings": "dist/esm/index.d.ts",
   "files": [
     "dist"
   ],
@@ -18,7 +19,7 @@
     "lint:css": "stylelint \"{src,test}/**/*.{css,less}\" --fix",
     "lint:es": "eslint \"{src,test}/**/*.{js,jsx,ts,tsx}\" --fix",
     "prepare": "husky install && dumi setup",
-    "prepublishOnly": "father doctor && npm run build",
+    "prepublishOnly": "npm run build",
     "start": "npm run dev",
     "test": "jest --passWithNoTests"
   },
